Removed align-items: flex-end rule from game.css, fixing fullscreen view

--- a/game.css
+++ b/game.css
@@ -13,7 +13,6 @@ html, body {
 
     display: flex;
     justify-content: center;
-    align-items: flex-end;
 
     outline: none;
 }
